--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,20 +53,20 @@
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(67.39% 0.1388 247.9);
+  --primary: oklch(65% 0.15 179.2);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(76.57% 0.091 171.82);
-  --secondary-foreground: oklch(67.39% 0.1388 247.9);
+  --secondary-foreground: oklch(65% 0.15 179.2);
   --muted: oklch(0.967 0.001 286.375);
   --muted-foreground: oklch(0.552 0.016 285.938);
   --accent: oklch(0.967 0.001 286.375);
-  --accent-foreground: oklch(67.39% 0.1388 247.9);
+  --accent-foreground: oklch(65% 0.15 179.2);
   --destructive: oklch(0.577 0.245 27.325);
   --border: oklch(0.92 0.004 286.32);
   --input: oklch(0.92 0.004 286.32);
   --ring: oklch(0.705 0.015 286.067);
   --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
+  --chart-2: oklch(65% 0.15 179.2);
   --chart-3: oklch(0.398 0.07 227.392);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
